# AInkaufen

./: .env.example  .gitignore  pyproject.toml  readme.md
.github/workflows/: daily-digest.yml  daily.yml  weekly.yml
src/Ainkaufen/: comparator.py  config.py  digest.py  main.py  matcher.py  models.py  notifier.py  scraper.py  sheet.py
tests/: test_comparator.py  test_matcher.py
